--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "eventoTest",
+            "request": "launch",
+            "mainClass": "eventoTest",
+            "projectName": "java-gestore-eventi_edce779f"
+        },
+        {
+            "type": "java",
             "name": "Main",
             "request": "launch",
             "mainClass": "Main",
